# GN

./: ONCHAIN_LAB_Scientific_Paper.md  push_to_remote.yml
onchain-lab/: .env.example  .gitignore  LAYMAN_GUIDE.md  Makefile  PLAN.md  PRICING_STRATEGY.md  README.md  SOT.md  check_actual_progress.py  check_d_blockchain.py  check_height_buckets.py  docker-compose.yml  ingest  mkdocs.yml  pyproject.toml  tmp_debug_snapshot.py
onchain-lab/artifacts/models/cnn_lstm/: model.pt  run_metadata.json
onchain-lab/artifacts/models/logreg/: model.joblib  run_metadata.json
onchain-lab/artifacts/models/xgboost/: model.xgb.joblib  run_metadata.json
onchain-lab/config/: ingest.yaml  metrics.local.yaml  metrics.yaml  metrics_registry.yaml  models.yaml  price_oracle.yaml  utxo.yaml
onchain-lab/data/metrics/daily/: metrics.parquet
onchain-lab/data/models/: baseline_signals.parquet  registry.json  selected_features.json
onchain-lab/data/models/cnn_lstm/: predictions.parquet  signals.parquet
onchain-lab/data/models/frame/: clip_bounds.json  metadata.json  scaler.joblib  sequence.npy  tabular.parquet
onchain-lab/data/models/logreg/: predictions.parquet  signals.parquet
onchain-lab/data/models/xgboost/: predictions.parquet  signals.parquet
onchain-lab/data/parquet/_markers/: state.json
onchain-lab/data/price_oracle/regtest/: regtest_prices.parquet
onchain-lab/docker/bitcoind/: bitcoin.conf
onchain-lab/docs/: index.md  metric_expansion_stage4_spec.md  stage5_recovery_plan.md
onchain-lab/docs/metrics/: adjusted_cdd.md  asopr.md  cdd.md  dormancy_flow.md  drawdown_pct.md  market_value_usd.md  mvrv.md  mvrv_zscore.md  nupl.md  price_close.md  realized_loss_usd.md  realized_profit_loss_ratio.md  realized_profit_usd.md  realized_value_usd.md  sopr.md  supply_btc.md  supply_cost_basis_usd.md  supply_sats.md  utxo_profit_share.md
onchain-lab/scripts/: _create_entities.py  derive_golden_refs.py
onchain-lab/site/: 404.html  index.html  search.html
onchain-lab/site/search/: search_index.json
onchain-lab/src/ingest/: README.md  __init__.py  cli.py  config.py  golden_refs.json  pipeline.py  qa.py  rpc.py  schemas.py  writer.py
onchain-lab/src/metrics/: __init__.py  cli.py  compute.py  config.py  datasets.py  docs.py  formulas.py  golden.py  inspect.py  provenance.py  qa.py  registry.py
onchain-lab/src/models/: __init__.py  backtest.py  baselines.py  baselines.py.bak  baselines_core.py  boruta.py  cli.py  config.py  eval.py  frame.py  utils.py
onchain-lab/src/price_oracle/: __init__.py  cli.py  config.py  fetcher.py  normalize.py  oracle.py  qa.py  sources.py  store.py
onchain-lab/src/utxo/: __init__.py  builder.py  cli.py  config.py  datasets.py  linker.py  qa.py  snapshots.py
onchain-lab/tests/: __init__.py
onchain-lab/tests/ingest/: test_pipeline.py  test_qa.py  test_schemas.py
onchain-lab/tests/metrics/: __init__.py  test_docs.py  test_formulas.py  test_inspect.py  test_pipeline.py  test_registry.py
onchain-lab/tests/models/: conftest.py  test_backtest.py  test_baselines.py  test_boruta.py  test_frame.py  test_no_lookahead.py
onchain-lab/tests/price_oracle/: test_oracle.py  test_sources.py
onchain-lab/tests/utxo/: conftest.py  test_builder.py  test_builder_streaming.py  test_qa.py  test_snapshots.py
onchain-lab/tmp_snapshot/entities/: entities.parquet
onchain-lab/tmp_snapshot/prices/: prices.parquet
(+5637 files in other folders)
